--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         <div class="form-info">
           <p>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
         </div>
-        <form action="https://formspree.io/f/{form_id}" method="post">
+        <form action="https://formspree.io/f/form_id" method="post">
         <div class="name-wrapper">
           <div class="input-wrapper first-name-input">
             <input type="text" id="first-name" placeholder="First Name">
@@ -308,7 +308,7 @@
           <input type="email" placeholder="Your email">
         </div>
         <textarea cols="30" rows="10" placeholder="Your message here..."></textarea>
-        <button class="btn-get">Get in touch</button>
+        <button type="button" class="btn-get">Get in touch</button>
       </form>
       </div>
     </footer>
