--- a/index.html
+++ b/index.html
@@ -293,21 +293,21 @@
     <footer>
       <div class="form-div">
         <div class="form-info">
-          <p>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
+          <h2>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
         </div>
         <form action="https://formspree.io/f/form_id" method="post">
         <div class="name-wrapper">
           <div class="input-wrapper first-name-input">
-            <input type="text" id="first-name" placeholder="First Name">
+            <input type="text" id="first-name" placeholder="First Name" minLength="6" maxLength="30" required>
           </div>
           <div class="input-wrapper last-name-input">
-            <input type="text" placeholder="Last Name">
+            <input type="text" placeholder="Last Name" minLength="6" maxLength="30" required>
           </div>
         </div>
         <div class="email-wrapper">
-          <input type="email" placeholder="Your email">
+          <input type="email" placeholder="Your email" required>
         </div>
-        <textarea cols="30" rows="10" placeholder="Your message here..."></textarea>
+        <textarea cols="30" rows="10" placeholder="Your message here..." maxLength="500"></textarea>
         <button type="button" class="btn-get">Get in touch</button>
       </form>
       </div>
